# memory_palace

./: .gitignore  README.md  consumer.py  database_interaction.py  llm_response_formatter.py  main.py  producer.py  pyproject.toml
prompts/: text_message_rewrite.txt
